Made article cards responsive

--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -423,10 +423,33 @@ header #hamburger {
     }
 }
 @media (max-width: 1300px) {
-    #section2, #contactSection1 {
+    #section2, #contactSection1, .articles {
         padding: 5rem 15rem;
         display: flex;
         flex-direction: column;
+    }
+    .articles {
+        padding: 7rem 3rem;
+    }
+    .articleCard {
+        display: grid;
+        grid-template-rows: 1fr;
+    }
+    .articleCard img {
+        grid-column-start: 1;
+        grid-row-start: 1;
+        height: 100%;
+        width: 400px;
+        border-top-left-radius: 0.75rem;
+        border-bottom-left-radius: 0.75rem;
+        border-top-right-radius: 0;
+
+        width: 25rem !important;
+        border: 2px solid black;
+    }
+    .articleCard div, .articleCard p {
+        grid-column-start: 2;
+        grid-row-start: 1;
     }
     #contactSection1 {
         gap: 0;
