--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/butler');
+@import url('https://fonts.googleapis.com/css2?family=Kavoon&display=swap');
+
 
 html {
     overflow-x: hidden;
@@ -54,6 +56,9 @@ body::-webkit-scrollbar-thumb {
     font-family: var(--primary-font);
     font-weight: 200;
 }
+.text-kavoon {
+    font-family: "Kavoon", open-sans;
+}
 .text-primary {
     color: var(--primary-color);
 }
@@ -65,6 +70,12 @@ body::-webkit-scrollbar-thumb {
 }
 .bg-secondary {
     background-color: var(--secondary-color);
+}
+.border-secondary {
+    border-color: var(--secondary-color);
+}
+.bg-black-100 {
+    background-color: var(--black-color);
 }
 .bg-black-5 {
     background-color: var(--black-5-color);
@@ -496,6 +507,15 @@ header #hamburger {
 }
 @media (max-width: 1000px) {
 
+    .countdown {
+        display: none;
+    }
+    .popup-main {
+        height: 70%;
+    }
+    .text-4xl {
+        font-size: 1.75rem;
+    }
     #links {
         display: none;
     }
@@ -651,6 +671,10 @@ header #hamburger {
 }
 
 @media (max-width: 600px) {
+    .popup-main {
+        width: 80%;
+    }
+
     .logoImg {
         margin-left: 2rem;
         width: 6000px;
@@ -708,6 +732,9 @@ header #hamburger {
 
 
 @media (max-width: 450px) {
+    .popup-main {
+        width: 90%;
+    }
     .text-4xl {
         font-size: 1.75rem;
     }
